@@ -140,10 +140,14 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
 				<version>3.5.2</version>
 				<configuration>
-					<argLine>-Djava.awt.headless=false</argLine>
+					<argLine>
+						-Djava.awt.headless=false
+						--add-opens java.base/java.util=ALL-UNNAMED
+						--add-opens java.desktop/java.awt=ALL-UNNAMED
+						--add-opens java.desktop/sun.awt=ALL-UNNAMED
+					</argLine>
 					<environmentVariables>
 						<DISPLAY>:99</DISPLAY>
 					</environmentVariables>
